src/Base/main/default/objects/Experience_Mitigation_Report_Employee__c/Experience_Mitigation_Report_Employee__c.object-meta.xml
<CustomObject>
    <label>Experience Mitigation Report Employee</label>
    <nameField>
        <displayFormat>emr-Employee-{0000}</displayFormat>
        <label>Experience Mitigation Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experience Mitigation Report Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>