src/Base/main/default/objects/Experience_Mitigation_Report_Employee__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Experience_Mitigation_Report_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>