src/Base/main/default/objects/Experience_Mitigation_Report_Employee__c/fields/Experience_Mitigation_Report__c.field-meta.xml
<CustomField>
    <fullName>Experience_Mitigation_Report__c</fullName>
    <label>Experience Mitigation Report</label>
    <referenceTo>Experience_Mitigation_Report__c</referenceTo>
    <relationshipLabel>Employees Involved</relationshipLabel>
    <relationshipName>Experience_Mitigation_Report_Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>