src/Base/main/default/objects/Experience_Mitigation_Report_Employee__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Experience_Mitigation_Report_Employees1</relationshipName>
    <type>Lookup</type>
</CustomField>